# sem-emergency-stop

./: .gitignore  CHANGELOG.md  Makefile  Pipfile  README.md  flake.nix  gygservice.yml  pyproject.toml  service-provisioning.yml  setup.py
ses/: auth.py  banner.py  main.py
